
* No longer support pre-lastmod notmuches.

* Catch missing content errors for messages, not fail.

* Wait and block R/O database opening, not fail.

* Defer changed_thread events on thread-index while still loading.

* Do not update tags in thread-view when not ready.

* configuration option thread_view.expand_flagged determines whether flagged
  messages are expanded by default.

when not== v0.8 / 2017-03-17

* New logo and icons by Elio Qoshi ( http://patreon.com/ura )

* Run hook for thread-view (Hugo Roy)

* Session-persistent folder history for attaching files and saving
  attachments. default is configurable.

* Remove duplicates when reply-all'ing.

* Handle mailto when astroid is already running.

* `scons --propagate-environment` uses environment from build environment.

* Show pane-focus with blue bar at top, swap focus with M-space. The
  keybinding is now located at 'pane.swap_focus'.

* Add optional drop-down terminal ('|') which has session-persistent
  working directory. Will silently be disabled if VTE is missing.

* Delay sending of message with configured time, in order to be able to
  cancel wrongly sent messages.

* New --start-polling, --stop-polling and --refresh LASTMOD options which
  makes external polling mechanisms work better.

* All notmuch tags are added to message CSS with 'nm-' prefix and some sanitation to allow thread-view customizing based on tag.

* Reply-To mailing list.

* Fix crypto and performance bugs among many others.

== v0.7 / 2017-01-02

* Messages are marked unread after a delay (default 2 sec) in
  thread-view. They can be manually toggled with 'N'.

* Edit drafts using an external editor (optional).

* Filter thread-index incrementally using 'C-f'.

* Use Tab and S-Tab to jump between unread messages in thread-view.

* Yank raw or decoded message or element to primary clipboard with 'Y'
  or 'y', useful for applying patches.

* Cancel sending with Ctrl + C.

* Yank the Message-ID to the primary clipboard with C-y.
